--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "myapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "foody",
+  "version": "1.0.0",
+  "description": "",
+  "keywords": [],
+  "main": "src/index.js",
   "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "node-sass": "^4.11.0",
+    "prop-types": "15.6.2",
+    "react": "16.8.0",
+    "react-bootstrap-typeahead": "3.3.3",
+    "react-dom": "16.8.0",
+    "react-scripts": "2.0.3"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
